@@ -1,5 +1,10 @@
 2008-12-05  Janis Johnson  <janis187@us.ibm.com>
 
+	* lib/target-supports.exp (check_effective_target_hard_dfp): New.
+	* gcc.dg/dfp/convert-dfp-round.c: Skip for hard_dfp.
+	* gcc.dg/dfp/fe-binop.c: Ditto.
+	* gcc.dg/dfp/fe-convert-1.c: Ditto.
+
 	Backport from mainline:
 	2008-05-15  Janis Johnson  <janis187@us.ibm.com>
 
